# AutoCDA

./: .coderabbit.yaml  .coverage  .dockerignore  .env.example  .env.template  .gitignore  .gitmodules  .slugignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_HYBRID.md  Dockerfile  LICENSE  Procfile  README.md  SELF_HOSTING_GUIDE.md  VERCEL_CHECKLIST.md  VERCEL_SETUP_SUMMARY.md  autocda.db  bonus_features.py  bonus_metrics_export.json  bonus_qualification_report.json  bonus_submission_summaries.json  conftest.py  demo_script.json  demo_script.py  deploy-self-hosted.sh  deploy-windows-server.bat  deploy.sh  docker-compose.yml  feature_tracker_report.json  final-check.py  final_checklist.py  generate_bonus_documentation.py  generate_demo_files.py  main.py  prepare_repo.py  qa_responses.py  qa_study_guide.json  quantifiable_metrics.json  (+33 more)
AutoCDA-backend/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
AutoCDA-backend/alembic/versions/: fe4657da5087_initial_clean_schema.py
AutoCDA-backend/app/api/: circuit_designs.py  components.py  health.py
AutoCDA-backend/app/core/: config.py  database.py  logging.py
AutoCDA-backend/app/models/: __init__.py  base.py  circuit.py  circuit_design.py  simulation_result.py
AutoCDA-backend/app/schemas/: __init__.py  circuit.py  circuit_design.py  component.py  simulation_result.py
alembic/: env.py
analysis/: netlist_parser.py  pattern_detector.py
app/: database.py  main.py  models.py
backend/: __init__.py  analytics.py  api.py  autocda.db  bonus_integration.py  circuit_optimizer.py  circuit_validator.py  config.py  (+31 more)
(+144 files in other folders)
